--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 5000
 CLIENT_URL = http://localhost:3000
 SECRET_KEY = danceinthemoonlight
-SECRET_GENERATE = phongtro123
+SECRET_GENERATE = 
+LIMIT = 20
